--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-chart-financial": "^0.1.1",
+    "chartjs-plugin-crosshair": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
