--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^1.6.8",
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-chart-financial": "^0.1.1",
     "chartjs-plugin-crosshair": "^1.2.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
