--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.8",
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-chart-financial": "^0.1.1",
     "chartjs-plugin-crosshair": "^1.2.0",
+    "chartjs-plugin-streaming": "^2.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^3.6.0",
+    "node-global": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -31,6 +36,8 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
